--- a/mediummenu/index.html
+++ b/mediummenu/index.html
@@ -9,10 +9,12 @@
 <body>
     <nav class="container">
         <img src="./zocom-logo.svg">
+        <section class="menu">
         <a href="#">Option 1</a>
         <a href="#">Option 2</a>
         <a href="#">Option 3</a>
         <a href="#">Option 4</a>
+        </section>
     </nav>
 </body>
 </html>
