--- a/product portrait/index.html
+++ b/product portrait/index.html
@@ -15,7 +15,7 @@
     <section class="product-info">
       <h1>Adidas Supersta</h1>
       <h2>2019 Djungle Edition</h2>
-      <p>It doesnt get any hotter then this. Rule the streets with this new jungle flavored sneakers from Adidas.</p>
+      <p>It doesn't get any hotter than this. Rule the streets with this new jungle flavored sneakers from Adidas.</p>
       <aside class="price">799sek</aside>
     </section>
   </article>
